@@ -29,12 +29,6 @@
 #include <string.h>
 #endif
 
-#ifndef _WIN32
-#include <stdlib.h>
-#else
-#define atoll(x) _atoi64((x))
-#endif	//	_WIN32
-
 #include "mysql_debug.h"
 #include "mysql_util.h"
 
@@ -399,7 +393,7 @@ MySQL_ResultSet::getInt(const std::string& columnLabel) const
 int64_t
 MySQL_ResultSet::getInt64(const unsigned int columnIndex) const
 {
-	CPP_ENTER("MySQL_ResultSet::getLong(int)");
+	CPP_ENTER("MySQL_ResultSet::getInt64(int)");
 
 	/* isBeforeFirst checks for validity */
 	if (isBeforeFirstOrAfterLast()) {
@@ -424,8 +418,43 @@ MySQL_ResultSet::getInt64(const unsigned int columnIndex) const
 int64_t
 MySQL_ResultSet::getInt64(const std::string& columnLabel) const
 {
-	CPP_ENTER("MySQL_ResultSet::getLong(string)");
+	CPP_ENTER("MySQL_ResultSet::getInt64(string)");
 	return getInt64(findColumn(columnLabel));
+}
+/* }}} */
+
+
+/* {{{ MySQL_ResultSet::getUInt64() -I- */
+uint64_t
+MySQL_ResultSet::getUInt64(const unsigned int columnIndex) const
+{
+	CPP_ENTER("MySQL_ResultSet::getUInt64(int)");
+
+	/* isBeforeFirst checks for validity */
+	if (isBeforeFirstOrAfterLast()) {
+		throw sql::InvalidArgumentException("MySQL_ResultSet::getUInt64: can't fetch because not on result set");
+	}
+
+	if (columnIndex == 0 || columnIndex > num_fields) {
+		throw sql::InvalidArgumentException("MySQL_ResultSet::getUInt64: invalid value of 'columnIndex'");
+	}
+
+	if (row[columnIndex - 1] == NULL) {
+		was_null = true;
+		return 0;
+	}
+	was_null = false;
+	return strtoull(row[columnIndex - 1], NULL, 10);
+}
+/* }}} */
+
+
+/* {{{ MySQL_ResultSet::getUInt64() -I- */
+uint64_t
+MySQL_ResultSet::getUInt64(const std::string& columnLabel) const
+{
+	CPP_ENTER("MySQL_ResultSet::getUInt64(string)");
+	return getUInt64(findColumn(columnLabel));
 }
 /* }}} */
 
