@@ -104,6 +104,9 @@ public:
 	int64_t getInt64(unsigned int columnIndex) const;
 	int64_t getInt64(const std::string& columnLabel) const;
 
+	uint64_t getUInt64(unsigned int columnIndex) const;
+	uint64_t getUInt64(const std::string& columnLabel) const;
+
 	sql::ResultSetMetaData * getMetaData() const;
 
 	size_t getRow() const;
